# brut

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test-package.yml
alembic/: env.py  script.py.mako
alembic/versions/: 513518a9decd_create_artifact_table.py  9fff3a650708_create_content_table.py
conf/grafana/: setup.sh
conf/grafana/dashboards/: brut-live-monitor.json  dramatiq.json
conf/grafana/datasources/: loki.json
conf/prometheus/: prometheus.yml
docker/: app-entrypoint.sh  app.Dockerfile  worker-entrypoint.sh  worker.Dockerfile
docs/source/: brut.rst  conf.py  getting-started.rst  index.rst
scripts/: app-entrypoint.sh  install-vendors.sh  recalculate_fingerprints.py  worker-entrypoint.sh
src/brut/: __init__.py  app.py  config.py  config.schema.json  constants.py  db.py  env.py  hasher.py  helpers.py  log.py  schedule.py  tasks.py  types.py
src/brut/db/: client.py  models.py
src/brut/db/changes/: 20230127171944_create_artifact_table.py
src/brut/integrations/: __init__.py  base.py  reddit.py
src/brut/watcher/: __init__.py  reddit.py
src/brut/watchers/: __init__.py  base.py  reddit.py
tests/: __init__.py  test_pytest.py
