[build-system]
requires = ["poetry>=0.12", "setuptools>=36.2.2", "wheel>=0.28.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "brut"
version = "0.1.0"
description = "Personal media archive toolset."
authors = ["Stephen Bunn <stephen@bunn.io>"]
maintainers = []
license = "ISC"
packages = [
  { include = "brut", from = "src" }
]
readme = "README.md"
homepage = "https://github.com/stephen-bunn/brut"
repository = "https://github.com/stephen-bunn/brut"
documentation = "https://brut.readthedocs.io"
keywords = [
  "brut"
]
classifiers = [
  "License :: OSI Approved :: ISC License (ISCL)",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: POSIX",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Natural Language :: English",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
include = [
  "pyproject.toml",
  "LICENSE",
  "README*.rst",
  "README*.md",
  "CHANGELOG.rst",
  "CHANGELOG.md",
  "CONTRIBUTING.rst",
  "CONTRIBUTING.md",
]
exclude = [
  ".editorconfig",
  ".pre-commit-config.yaml",
  ".readthedocs.yaml",
  "requirements*.txt"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/stephen-bunn/brut/issues"

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.5"
dramatiq = {extras = ["redis", "watch"], version = "^1.10.0"}
alembic = "^1.5.8"
APScheduler = "^3.7.0"
environ-config = "^20.1.0"
loguru = "^0.5.3"
praw = "^7.2.0"
requests = "^2.25.1"
file-config = {extras = ["pyaml"], version = "^1.0.0"}
cached-property = "^1.5.2"
megu = {git = "https://github.com/stephen-bunn/megu"}
xxhash = "^2.0.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
check-manifest = "^0.42"
colorama = "^0.4.3"
coverage = { version = "^5.2.1", extras = ["toml"] }
flake8 = "^3.8.3"
flake8-docstrings = "^1.5.0"
hypothesis = "^5.29.3"
invoke = "^1.4.1"
isort = "^5.4.2"
mypy = "^0.782"
pre-commit = "^2.7.1"
pyprof2calltree = { version = "^1.4.5", optional = true }
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
pytest-flake8 = "^1.0.6"
pytest-sugar = "^0.9.4"
pytest-xdist = "^2.1.0"
readme-renderer = { version = "^26.0", extras = ["md"] }
rope = "^0.17.0"
sphinx = "^3.2.1"
toml = "^0.10.1"
towncrier = "^19.2.0"
twine = "^3.2.0"
vprof = { version = "^0.38", optional = true }

[tool.poetry.extras]
profile = ["pyprof2calltree", "vprof"]

[tool.black]
line-length = 88
target_version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
    \.eggs
    | \.git
    | \.mypy_cache
    | _build
    | build
    | dist
  )/
)
'''

[tool.towncrier]
package = "brut"
package_dir = "src"
filename = "CHANGELOG.rst"
directory = "changes/"
title_format = "`{version} <https://github.com/stephen-bunn/brut/releases/tag/v{version}>`_ (*{project_date}*)"
issue_format = '`#{issue} <https://github.com/stephen-bunn/brut/issues/{issue}>`_'
template = 'tasks/CHANGELOG.rst.jinja2'

[[tool.towncrier.type]]
directory = 'feature'
name = 'Features'
showcontent = true

[[tool.towncrier.type]]
directory = 'bugfix'
name = 'Bug Fixes'
showcontent = true

[[tool.towncrier.type]]
directory = 'doc'
name = 'Documentation'
showcontent = true

[[tool.towncrier.type]]
directory = 'trivial'
name = 'Trivial Changes'
showcontent = false

[[tool.towncrier.type]]
directory = 'misc'
name = 'Miscellaneous'
showcontent = true

[[tool.towncrier.type]]
directory = 'removal'
name = 'Removals'
showcontent = true

[[tool.towncrier.type]]
directory = 'deprecation'
name = 'Deprecations'
showcontent = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rxsX --flake8 -n 4 --cov"
norecursedirs = [
  ".git",
  "_build",
  "dist",
  "changes",
  "tasks",
  "docs"
]
testpaths = "tests"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
flake8-ignore = [
  "docs/source/*.py ALL",
  "tests/*.py ALL",
  "setup.py ALL"
]

[tool.coverage.run]
branch = true
parallel = true
disable_warnings = [
  "no-data-collected"
]
source = [
  "src/brut/"
]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
